# document-review-skill

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
agents/: openai.yaml
examples/: sample-proposal.md
references/: automated-review-sop.md  decision-document-template.md  logic-flaws.md  normative-language.md  operating-principles.md
scripts/: requirements.txt  review_document.py
scripts/doc_review_agent/: __init__.py  chunking.py  cli.py  config.py  document_loader.py  llm_client.py  models.py  prompts.py  report.py  reviewer.py
tests/: conftest.py  test_chunking.py  test_config.py  test_document_loader.py  test_review_skill_integration.py  test_reviewer.py
